--- a/src/main/resources/templates/article/show.html
+++ b/src/main/resources/templates/article/show.html
@@ -64,8 +64,8 @@
         <div class="collapse navbar-collapse" id="navbar-collapse2">
             <ul class="nav navbar-nav navbar-right">
                 <!-- 🔹 로그인 상태가 아닐 때 -->
-                <li th:if="${session.loginUser == null}"><a href="user/login.html">로그인</a></li>
-                <li th:if="${session.loginUser == null}"><a href="user/form.html">회원가입</a></li>
+                <li th:if="${session.loginUser == null}"><a href="/users/login">로그인</a></li>
+                <li th:if="${session.loginUser == null}"><a href="/users/saveForm">회원가입</a></li>
 
                 <!-- 🔹 로그인 상태일 때 -->
                 <!--                <li th:if="${session.loginUser != null}"><a href="/users/logout">로그아웃</a></li>-->
@@ -113,7 +113,7 @@
                   <div class="article-util">
                       <ul class="article-util-list">
                           <li>
-                              <a class="link-modify-article" th:href="@{/articles/edit/{userId}/{articleId}(userId=${article.user.id}, articleId=${article.id})}">수정</a>
+                              <a class="link-modify-article" th:href="@{/articles/edit/{articleId}(articleId=${article.id})}">수정</a>
                           </li>
                           <li>
                               <form class="form-delete" th:action="@{/articles/{articleId}(articleId=${article.id})}" method="POST">
@@ -130,59 +130,64 @@
 
               <div class="qna-comment">
                   <div class="qna-comment-slipp">
-                      <p class="qna-comment-count"><strong>2</strong>개의 의견</p>
-                      <div class="qna-comment-slipp-articles">
 
-                          <article class="article" id="answer-1405">
-                              <div class="article-header">
-                                  <div class="article-header-thumb">
-                                      <img src="https://graph.facebook.com/v2.3/1324855987/picture" class="article-author-thumb" alt="">
+                      <!-- 로그인한 사용자만 댓글을 볼 수 있도록 설정 -->
+                      <th:block th:if="${session.loginUser != null}">
+                          <p class="qna-comment-count"><strong>2</strong>개의 의견</p>
+                          <div class="qna-comment-slipp-articles">
+
+                              <article class="article" id="answer-1405">
+                                  <div class="article-header">
+                                      <div class="article-header-thumb">
+                                          <img src="https://graph.facebook.com/v2.3/1324855987/picture" class="article-author-thumb" alt="">
+                                      </div>
+                                      <div class="article-header-text">
+                                          <a href="/users/1/자바지기" class="article-author-name">자바지기</a>
+                                          <a href="#answer-1434" class="article-header-time" title="퍼머링크">
+                                              2016-01-12 14:06
+                                          </a>
+                                      </div>
                                   </div>
-                                  <div class="article-header-text">
-                                      <a href="/users/1/자바지기" class="article-author-name">자바지기</a>
-                                      <a href="#answer-1434" class="article-header-time" title="퍼머링크">
-                                          2016-01-12 14:06
-                                      </a>
+                                  <div class="article-doc comment-doc">
+                                      <p>이 글만으로는 원인 파악하기 힘들겠다. 소스 코드와 설정을 단순화해서 공유해 주면 같이 디버깅해줄 수도 있겠다.</p>
                                   </div>
-                              </div>
-                              <div class="article-doc comment-doc">
-                                  <p>이 글만으로는 원인 파악하기 힘들겠다. 소스 코드와 설정을 단순화해서 공유해 주면 같이 디버깅해줄 수도 있겠다.</p>
-                              </div>
-                              <div class="article-util">
-                                  <ul class="article-util-list">
-                                      <li>
-                                          <a class="link-modify-article" href="/questions/413/answers/1405/form">수정</a>
-                                      </li>
-                                      <li>
-                                          <form class="delete-answer-form" action="/questions/413/answers/1405" method="POST">
-                                              <input type="hidden" name="_method" value="DELETE">
-                                              <button type="submit" class="delete-answer-button">삭제</button>
-                                          </form>
-                                      </li>
-                                  </ul>
-                              </div>
-                          </article>
-                          <article class="article" id="answer-1406">
-                              <div class="article-header">
-                                  <div class="article-header-thumb">
-                                      <img src="https://graph.facebook.com/v2.3/1324855987/picture" class="article-author-thumb" alt="">
+                                  <div class="article-util">
+                                      <ul class="article-util-list">
+                                          <li>
+                                              <a class="link-modify-article" href="/questions/413/answers/1405/form">수정</a>
+                                          </li>
+                                          <li>
+                                              <form class="delete-answer-form" action="/questions/413/answers/1405" method="POST">
+                                                  <input type="hidden" name="_method" value="DELETE">
+                                                  <button type="submit" class="delete-answer-button">삭제</button>
+                                              </form>
+                                          </li>
+                                      </ul>
                                   </div>
-                                  <div class="article-header-text">
-                                      <a href="/users/1/자바지기" class="article-author-name">자바지기</a>
-                                      <a href="#answer-1434" class="article-header-time" title="퍼머링크">
-                                          2016-01-12 14:06
-                                      </a>
+                              </article>
+
+                              <article class="article" id="answer-1406">
+                                  <div class="article-header">
+                                      <div class="article-header-thumb">
+                                          <img src="https://graph.facebook.com/v2.3/1324855987/picture" class="article-author-thumb" alt="">
+                                      </div>
+                                      <div class="article-header-text">
+                                          <a href="/users/1/자바지기" class="article-author-name">자바지기</a>
+                                          <a href="#answer-1434" class="article-header-time" title="퍼머링크">
+                                              2016-01-12 14:06
+                                          </a>
+                                      </div>
                                   </div>
-                              </div>
-                          </article>
-                          <form class="submit-write">
-                              <div class="form-group" style="padding:14px;">
-                                  <textarea class="form-control" placeholder="Update your status"></textarea>
-                              </div>
-                              <button class="btn btn-success pull-right" type="button">답변하기</button>
-                              <div class="clearfix" />
-                          </form>
-                      </div>
+                              </article>
+                          </div>
+                      </th:block>
+
+                      <!-- 로그인하지 않은 경우 댓글을 숨기고, 로그인 안내 메시지 표시 -->
+                      <th:block th:if="${session.loginUser == null}">
+                          <p class="text-center text-danger">댓글을 보려면 로그인하세요.</p>
+                          <a href="/users/login" class="btn btn-primary">로그인</a>
+                      </th:block>
+
                   </div>
               </div>
           </div>
