refactor: 간단한 오류 수정

--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -53,27 +53,76 @@
                         </div>
                     </article>
 
-                    <!-- 댓글 입력 폼 (기능 미구현 상태) -->
+                    <!-- 댓글  -->
                     <div class="qna-comment">
                         <div class="qna-comment-slipp">
-                            <p class="qna-comment-count"><strong>0</strong>개의 의견</p>
+                            <!-- 댓글 수 출력: board.replies 리스트의 크기를 표시 -->
+                            <p class="qna-comment-count">
+                                <strong th:text="${#lists.size(board.replies)}">0</strong>개의 의견
+                            </p>
+                            <!-- 댓글 리스트 출력 -->
                             <div class="qna-comment-slipp-articles">
-                                <!-- 댓글 리스트 들어올 자리 -->
+                                <!-- board.replies 리스트를 반복하여 각 댓글(article) 출력 -->
+                                <article class="article" th:each="reply : ${board.replies}">
+                                    <div class="row article-header">
+                                        <!-- 작성자 정보 (왼쪽) -->
+                                        <div class="col-3 d-flex">
+                                            <div class="article-header-thumb">
+                                                <!-- 필요하다면 이미지 태그 추가 가능, 현재는 비워두거나 다른 내용 배치 -->
+                                                <img src="https://graph.facebook.com/v2.3/100000059371774/picture"
+                                                     class="article-author-thumb" alt="">
+                                            </div>
+                                            <div class="article-header-text ms-2">
+                                                <a href="#" class="article-author-name" th:text="${reply.writer.name}">작성자</a>
+                                            </div>
+                                        </div>
+                                        <!-- 댓글 내용 (오른쪽) -->
+                                        <div class="col-9">
+                                            <div class="article-doc comment-doc">
+                                                <p th:text="${reply.content}">댓글 내용</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="article-util">
+                                        <ul class="article-util-list">
+                                            <li>
+                                                <a class="link-modify-article" style="font-size: 14px; text-decoration: none; cursor: pointer;"
+                                                   th:href="@{/boards/{boardId}/replies/{replyId}/edit(boardId=${board.boardId},replyId=${reply.id})}">
+                                                    수정
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <form class="delete-answer-form" th:action="@{/boards/{boardId}/replies/{replyId}(boardId=${board.boardId},replyId=${reply.id})}" method="post">
+                                                    <input type="hidden" name="_method" value="DELETE">
+                                                    <button type="submit" class="delete-answer-button">삭제</button>
+                                                </form>
+                                            </li>
+<!--                                            &lt;!&ndash; 삭제 버튼: 로그인한 사용자(session.user)가 댓글 작성자(reply.writer)와 같을 때만 노출 &ndash;&gt;-->
+<!--                                            <li th:if="${session.user != null and session.user.id == reply.writer.id}">-->
+<!--                                                <form class="delete-answer-form" th:action="@{/boards/{boardId}/replies/{replyId}(boardId=${board.boardId},replyId=${reply.id})}" method="post">-->
+<!--                                                    &lt;!&ndash; HTML form이 기본적으로 DELETE를 지원하지 않으므로, hidden 필드로 오버라이딩 &ndash;&gt;-->
+<!--                                                    <input type="hidden" name="_method" value="DELETE">-->
+<!--                                                    <button type="submit" class="delete-answer-button">삭제</button>-->
+<!--                                                </form>-->
+<!--                                            </li>-->
+                                        </ul>
+                                    </div>
+                                </article>
                             </div>
-
-                            <form class="submit-write" action="#" method="POST">
+                            <!-- 댓글 입력 폼 -->
+                            <form class="submit-write" th:action="@{/boards/{boardId}/replies(boardId=${board.boardId})}" method="post">
                                 <div class="form-group" style="padding:14px;">
-                                    <textarea class="form-control" placeholder="댓글을 입력하세요..."></textarea>
+                                    <textarea class="form-control" name="content" placeholder="댓글을 입력하세요..."></textarea>
                                 </div>
-                                <button class="btn btn-success pull-right" type="button">댓글 작성</button>
+                                <button class="btn btn-success pull-right" type="submit">댓글 작성</button>
                                 <div class="clearfix"></div>
                             </form>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
+                </div> <!-- 닫는 태그 추가: qna-comment -->
+            </div> <!-- 닫는 태그 추가: panel -->
+        </div> <!-- 닫는 태그 추가: col -->
+    </div> <!-- 닫는 태그 추가: container -->
 
     <script type="text/template" id="answerTemplate">
         <article class="article">
@@ -90,20 +139,21 @@
                 {2}
             </div>
             <div class="article-util">
-            <ul class="article-util-list">
-                <li>
-                    <a class="link-modify-article" href="/api/qna/updateAnswer/{3}">수정</a>
-                </li>
-                <li>
-                    <form class="delete-answer-form" action="/api/questions/{3}/answers/{4}" method="POST">
-                        <input type="hidden" name="_method" value="DELETE">
-                         <button type="submit" class="delete-answer-button">삭제</button>
-                    </form>
-                </li>
-            </ul>
+                <ul class="article-util-list">
+                    <li>
+                        <a class="link-modify-article" href="/api/qna/updateAnswer/{3}">수정</a>
+                    </li>
+                    <li>
+                        <form class="delete-answer-form" action="/api/questions/{3}/answers/{4}" method="POST">
+                            <input type="hidden" name="_method" value="DELETE">
+                            <button type="submit" class="delete-answer-button">삭제</button>
+                        </form>
+                    </li>
+                </ul>
             </div>
         </article>
     </script>
+
 
     <!-- script references -->
     <th:block th:replace="~{layout/footer :: footer}"></th:block>
