--- a/src/main/resources/templates/article/index.html
+++ b/src/main/resources/templates/article/index.html
@@ -65,8 +65,8 @@
         <div class="collapse navbar-collapse" id="navbar-collapse2">
             <ul class="nav navbar-nav navbar-right">
                 <!-- 🔹 로그인 상태가 아닐 때 -->
-                <li th:if="${session.loginUser == null}"><a href="user/login.html">로그인</a></li>
-                <li th:if="${session.loginUser == null}"><a href="user/form.html">회원가입</a></li>
+                <li th:if="${session.loginUser == null}"><a href="/users/login">로그인</a></li>
+                <li th:if="${session.loginUser == null}"><a href="/users/saveForm">회원가입</a></li>
 
                 <!-- 🔹 로그인 상태일 때 -->
 <!--                <li th:if="${session.loginUser != null}"><a href="/users/logout">로그아웃</a></li>-->
@@ -79,9 +79,6 @@
                 <li th:if="${session.loginUser != null}">
                     <span>환영합니다, <b th:text="${session.loginUser.userId}"></b> 님!</span>
                 </li>
-
-
-
             </ul>
         </div>
     </div>
@@ -134,7 +131,7 @@
                 </ul>
               </div>
               <div class="col-md-3 qna-write">
-                  <a href="./qna/form.html" class="btn btn-primary pull-right" role="button">질문하기</a>
+                  <a href="/articles" class="btn btn-primary pull-right" role="button">질문하기</a>
               </div>
           </div>
         </div>
