--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -64,10 +64,10 @@
         <div class="collapse navbar-collapse" id="navbar-collapse2">
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="../index.html">Posts</a></li>
-                <li><a href="../user/login.html" role="button">로그인</a></li>
-                <li><a href="../user/form.html" role="button">회원가입</a></li>
-                <li><a href="#" role="button">로그아웃</a></li>
-                <li><a href="#" role="button">개인정보수정</a></li>
+                <li th:if="${session.user == null}"><a th:href="@{/auth/login}" role="button">로그인</a></li>
+                <li th:if="${session.user == null}"><a th:href="@{/users/form}" role="button">회원가입</a></li>
+                <li th:if="${session.user != null}"><a th:href="@{/auth/logout}" role="button">로그아웃</a></li>
+                <li th:if="${session.user != null}"><a th:href="@{/users/{userId}/form(userId=${session.user.userId})}" role="button">개인정보수정</a></li>
             </ul>
         </div>
     </div>
@@ -99,7 +99,7 @@
                           <img src="https://graph.facebook.com/v2.3/100000059371774/picture" class="article-author-thumb" alt="">
                       </div>
                       <div class="article-header-text">
-                          <a href="/users/92/kimmunsu" class="article-author-name" th:text="${article.writer}" >kimmunsu</a>
+                          <a href="/users/92/kimmunsu" class="article-author-name" th:text="${article.writer.name}" >kimmunsu</a>
                           <a href="/questions/413" class="article-header-time" title="퍼머링크">
                               2015-12-30 01:47
                               <i class="icon-link"></i>
@@ -113,10 +113,11 @@
                   <div class="article-util">
                       <ul class="article-util-list">
                           <li>
-                              <a class="link-modify-article" href="/questions/423/form">수정</a>
+                              <a class="link-modify-article"  th:href="@{/articles/{articleId}/updateForm(articleId=${article.articleId})}">
+                                  수정</a>
                           </li>
                           <li>
-                              <form class="form-delete" action="/questions/423" method="POST">
+                              <form class="form-delete" th:action="@{/articles/{articleId}/delete(articleId=${article.articleId})}" method="POST">
                                   <input type="hidden" name="_method" value="DELETE">
                                   <button class="link-delete-article" type="submit">삭제</button>
                               </form>
