--- a/src/main/resources/templates/qna/updateForm.html
+++ b/src/main/resources/templates/qna/updateForm.html
@@ -53,13 +53,13 @@
                 <li class="nav-divider"></li>
                 <li><a href="#"><i class="glyphicon glyphicon-cog" style="color:#dd1111;"></i> Settings</a></li>
             </ul>
-            
+
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse2">
-            	<span class="sr-only">Toggle navigation</span>
-            	<span class="icon-bar"></span>
-            	<span class="icon-bar"></span>
-            	<span class="icon-bar"></span>
-            </button>            
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse2">
             <ul class="nav navbar-nav navbar-right">
@@ -74,23 +74,32 @@
 </div>
 
 <div class="container" id="main">
-   <div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
-      <div class="panel panel-default content-main">
-          <form th:object="${article}" name="question" method="post" th:action="@{/articles}">
+    <div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
+        <div class="panel panel-default content-main">
+            <!-- 로그인한 사용자와 글쓴이 ID 비교
+            <div th:if="${session.user == null or article.writer == null or session.user.name != article.writer.name}">
+                <script>
+                    alert("다른 사람의 글을 수정할 수 없습니다.");
+                    window.location.href = "/error/forbidden"; // 에러 페이지로 이동
+                </script>
+            </div>
+            -->
+            <form name="question" method="post" th:object="${article}"  th:action="@{/articles/{articleId}/update(articleId=${article.articleId})}">
+                <input type="hidden" name="_method" value="put"/>
+                <!-- 로그인 사용자 이름을 자동으로 저장 -->
+                <input type="hidden" id="writerId" name="writerId" th:value="${session.user != null ? session.user.id : ''}" />
 
-              <!-- 로그인 사용자 ID를 자동으로 저장 -->
-              <input type="hidden" id="writerId" name="writerId" th:value="${session.user.id}" />
-              <div class="form-group">
-                  <label for="title">제목</label>
-                  <input type="text" class="form-control" id="title" name="title"   th:field="*{title}" placeholder="제목" />
-              </div>
-              <div class="form-group">
-                  <label for="contents">내용</label>
-                  <textarea name="contents" id="contents" rows="5" class="form-control" th:field="*{contents}" required></textarea>
-              </div>
-              <button type="submit" class="btn btn-success clearfix pull-right">저장하기</button>
-              <div class="clearfix" />
-          </form>
+                <div class="form-group">
+                    <label for="title">제목</label>
+                    <input type="text" class="form-control" id="title" name="title"  th:value="${article.title}" placeholder="제목" required/>
+                </div>
+                <div class="form-group">
+                    <label for="contents">내용</label>
+                    <textarea name="contents" id="contents" rows="5" class="form-control" required>[[${article.contents}]]</textarea>
+                </div>
+                <button type="submit" class="btn btn-success clearfix pull-right">수정하기</button>
+                <div class="clearfix" />
+            </form>
         </div>
     </div>
 </div>
@@ -99,5 +108,5 @@
 <script src="/js/jquery-2.2.0.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/scripts.js"></script>
-	</body>
+</body>
 </html>
