refactor: 댓글 html 수정 * 댓글 수정 폼 인라인형식으로 * 로그인 사용자와 댓글 작성자가 같은 경우에만 삭제, 수정 버튼이 보임

--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -56,73 +56,56 @@
                     <!-- 댓글  -->
                     <div class="qna-comment">
                         <div class="qna-comment-slipp">
-                            <!-- 댓글 수 출력: board.replies 리스트의 크기를 표시 -->
-                            <p class="qna-comment-count">
-                                <strong th:text="${#lists.size(board.replies)}">0</strong>개의 의견
-                            </p>
-                            <!-- 댓글 리스트 출력 -->
+                            <p class="qna-comment-count"><strong th:text="${#lists.size(board.replies)}">0</strong>개의 의견</p>
                             <div class="qna-comment-slipp-articles">
-                                <!-- board.replies 리스트를 반복하여 각 댓글(article) 출력 -->
-                                <article class="article" th:each="reply : ${board.replies}">
-                                    <div class="row article-header">
-                                        <!-- 작성자 정보 (왼쪽) -->
-                                        <div class="col-3 d-flex">
+                                <div th:each="reply : ${board.replies}">
+                                    <article class="article">
+                                        <div class="article-header">
                                             <div class="article-header-thumb">
-                                                <!-- 필요하다면 이미지 태그 추가 가능, 현재는 비워두거나 다른 내용 배치 -->
-                                                <img src="https://graph.facebook.com/v2.3/100000059371774/picture"
-                                                     class="article-author-thumb" alt="">
+                                                <img src="https://graph.facebook.com/v2.3/1324855987/picture" class="article-author-thumb" alt="">
                                             </div>
-                                            <div class="article-header-text ms-2">
-                                                <a href="#" class="article-author-name" th:text="${reply.writer.name}">작성자</a>
+                                            <div class="article-header-text">
+                                                <span class="article-author-name" th:text="${reply.writer.name}">작성자</span>
                                             </div>
                                         </div>
-                                        <!-- 댓글 내용 (오른쪽) -->
-                                        <div class="col-9">
-                                            <div class="article-doc comment-doc">
-                                                <p th:text="${reply.content}">댓글 내용</p>
-                                            </div>
+                                        <div class="article-doc comment-doc">
+                                            <p th:text="${reply.content}">댓글 내용</p>
                                         </div>
-                                    </div>
-                                    <div class="article-util">
-                                        <ul class="article-util-list">
-                                            <li>
-                                                <a class="link-modify-article" style="font-size: 14px; text-decoration: none; cursor: pointer;"
-                                                   th:href="@{/boards/{boardId}/replies/{replyId}/edit(boardId=${board.boardId},replyId=${reply.id})}">
-                                                    수정
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <form class="delete-answer-form" th:action="@{/boards/{boardId}/replies/{replyId}(boardId=${board.boardId},replyId=${reply.id})}" method="post">
-                                                    <input type="hidden" name="_method" value="DELETE">
-                                                    <button type="submit" class="delete-answer-button">삭제</button>
-                                                </form>
-                                            </li>
-<!--                                            &lt;!&ndash; 삭제 버튼: 로그인한 사용자(session.user)가 댓글 작성자(reply.writer)와 같을 때만 노출 &ndash;&gt;-->
-<!--                                            <li th:if="${session.user != null and session.user.id == reply.writer.id}">-->
-<!--                                                <form class="delete-answer-form" th:action="@{/boards/{boardId}/replies/{replyId}(boardId=${board.boardId},replyId=${reply.id})}" method="post">-->
-<!--                                                    &lt;!&ndash; HTML form이 기본적으로 DELETE를 지원하지 않으므로, hidden 필드로 오버라이딩 &ndash;&gt;-->
-<!--                                                    <input type="hidden" name="_method" value="DELETE">-->
-<!--                                                    <button type="submit" class="delete-answer-button">삭제</button>-->
-<!--                                                </form>-->
-<!--                                            </li>-->
-                                        </ul>
-                                    </div>
-                                </article>
-                            </div>
-                            <!-- 댓글 입력 폼 -->
-                            <form class="submit-write" th:action="@{/boards/{boardId}/replies(boardId=${board.boardId})}" method="post">
-                                <div class="form-group" style="padding:14px;">
-                                    <textarea class="form-control" name="content" placeholder="댓글을 입력하세요..."></textarea>
+                                        <div class="article-util">
+                                            <ul class="article-util-list" th:if="${reply.writer.id == session.user.id}">
+                                                <li>
+                                                    <a href="#" class="link-modify-article"
+                                                       th:attr="data-reply-id=${reply.id}, data-board-id=${board.boardId}"
+                                                       onclick="showEditForm(this); return false;">수정</a>
+                                                </li>
+                                                <li>
+                                                    <form class="delete-answer-form" th:action="@{/boards/{boardId}/replies/{replyId}(boardId=${board.boardId},replyId=${reply.id})}" method="POST">
+                                                        <input type="hidden" name="_method" value="DELETE">
+                                                        <button type="submit" class="delete-answer-button">삭제</button>
+                                                    </form>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </article>
                                 </div>
-                                <button class="btn btn-success pull-right" type="submit">댓글 작성</button>
-                                <div class="clearfix"></div>
-                            </form>
+
+                                <!-- 댓글 입력 폼 (새 댓글 추가) -->
+                                <form class="submit-write" th:action="@{/boards/{boardId}/replies(boardId=${board.boardId})}" method="post">
+                                    <div class="form-group" style="padding:14px;">
+                                        <!-- name을 content로 변경 -->
+                                        <textarea class="form-control" name="content" placeholder="댓글을 입력하세요" required></textarea>
+                                    </div>
+                                    <button class="btn btn-success pull-right" type="submit">답변하기</button>
+                                    <div class="clearfix"></div>
+                                </form>
+                            </div>
                         </div>
                     </div>
-                </div> <!-- 닫는 태그 추가: qna-comment -->
-            </div> <!-- 닫는 태그 추가: panel -->
-        </div> <!-- 닫는 태그 추가: col -->
-    </div> <!-- 닫는 태그 추가: container -->
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <script type="text/template" id="answerTemplate">
         <article class="article">
@@ -154,7 +137,29 @@
         </article>
     </script>
 
+    <!-- 인라인 수정 폼 템플릿: 만약 JS로 동적으로 처리하지 않으면, 별도의 템플릿 없이 JS를 이용 -->
+    <script>
+        function showEditForm(button) {
+            // 버튼의 data 속성에서 replyId와 boardId 추출
+            const replyId = button.getAttribute("data-reply-id");
+            const boardId = button.getAttribute("data-board-id");
+            // 댓글 article 요소를 찾고, 그 안의 .article-doc 영역을 선택
+            const articleElem = button.closest(".article");
+            const contentText = articleElem.querySelector(".article-doc p").innerText;
 
+            // 수정 폼 HTML 구성 (PUT 요청으로 전송)
+            const formHTML = `
+            <form method="post" action="/boards/${boardId}/replies/${replyId}/edit">
+                <input type="hidden" name="_method" value="PUT" />
+                <textarea name="content" class="form-control" required>${contentText}</textarea>
+                <button type="submit" class="btn btn-primary btn-sm">수정 완료</button>
+                <button type="button" class="btn btn-secondary btn-sm" onclick="location.reload();">취소</button>
+            </form>
+        `;
+            // 댓글의 article-doc 영역을 수정 폼으로 대체
+            articleElem.querySelector(".article-doc").innerHTML = formHTML;
+        }
+    </script>
     <!-- script references -->
     <th:block th:replace="~{layout/footer :: footer}"></th:block>
 </body>
