--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -60,7 +60,12 @@
         <div class="navbar-header">
             <a href="#" style="margin-left:15px;" class="navbar-btn btn btn-default btn-plus dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-home" style="color:#dd1111;"></i> Home <small><i class="glyphicon glyphicon-chevron-down"></i></small></a>
             <ul class="nav dropdown-menu">
-                <li><a href="/users/profile" th:href="@{/users/{id}(id=${session.LOGGED_IN_USER_ID})}"><i class="glyphicon glyphicon-user" style="color:#1111dd;"></i> Profile</a></li>
+                <li>
+                    <!-- 로그인 상태에 따라 다른 링크 제공 -->
+                    <a th:href="${session.LOGGED_IN_USER_ID != null} ? @{/users/{id}(id=${session.LOGGED_IN_USER_ID})} : @{/}">
+                        <i class="glyphicon glyphicon-user" style="color:#1111dd;"></i> Profile
+                    </a>
+                </li>
                 <li class="nav-divider"></li>
                 <li><a href="#"><i class="glyphicon glyphicon-cog" style="color:#dd1111;"></i> Settings</a></li>
             </ul>
